[package]
name = "bevy_egui_controls"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "Helps build a control panel with egui."
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>", "Actually Happening"]
repository = "https://github.com/aalekhpatel07/egui-controls"
keywords = ["egui", "control-panel", "controls", "bevy", "bevy-egui", "bevy-egui-controls"]
categories = ["gui", "game-development"]

[lib]
proc-macro = true

[[example]]
path = "examples/readme.rs"
name = "readme"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full", "fold", "extra-traits"] }
proc-macro2 = "1.0.60"

[dev-dependencies]
bevy_egui = "0.21.0"
